fix bug on google link text overflow

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ body {
 
     line-clamp: 1;
     display: -webkit-box;
-    -webkit-line-clamp: 1;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical; 
     overflow: hidden;
 }
@@ -112,9 +112,9 @@ body {
     line-height: 1.5;
     font-size: 0.8rem;
     
-    line-clamp: 4;
+    line-clamp: 3;
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;  
     overflow: hidden;
 }
